fix splashscreen moving on mobile

--- a/mille-sabord.css
+++ b/mille-sabord.css
@@ -1,5 +1,1 @@
 @import "./src/game.css";
-
-#app {
-  visibility: visible !important;
-}
